Complete DoMissionView
