# src/CSharp/Server/Avalon.Domain/Contracts/Requests/CreateGaneMissionRequestContract.cs
@@ -1,0 +1,6 @@
+﻿namespace Avalon.Contracts.Requests;
+public class CreateGaneMissionRequestContract
+{
+    public long GameMissionId { get; set; }
+    public byte FailCount { get; set; }
+}
